--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,48 @@
   text-align: center;
   padding: 20px,
 }
+
+
+/* Estilos para ItemList */
+.item-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* Estilos para Item */
+.item-card {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+  text-align: center;
+}
+
+.item-image {
+  width: 100%;
+  height: auto;
+}
+
+.item-detail-link {
+  display: inline-block;
+  margin-top: 10px;
+  color: blue;
+  text-decoration: none;
+}
+
+.item-detail-link:hover {
+  text-decoration: underline;
+}
+
+/* Estilos para ItemDetail */
+.item-detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item-detail-image {
+  width: 300px;
+  height: auto;
+}
